--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -88,6 +88,7 @@ Resources:
                   - !Sub "arn:aws:s3:::processed-matrix-${Environment}-${AWS::AccountId}/*"
                   - !Sub "arn:aws:s3:::biomage-originals-${Environment}-${AWS::AccountId}/*"
                   - !Sub "arn:aws:s3:::cellenics-cell-level-metadata-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::spatial-images-${Environment}-${AWS::AccountId}/*"
 
         - PolicyName: !Sub "can-upload-cell-sets-in-s3-${Environment}"
           PolicyDocument:
