add launch template for batch with imdsv1 disabled
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/cf/batch.yaml
+++ b/cf/batch.yaml
@@ -15,7 +15,16 @@ Conditions:
     - !Ref Environment
     - production
 
-Resources:
+  # Define the Launch Template with Metadata Options
+  BatchLaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
+    Properties:
+      LaunchTemplateName: !Sub "launch-template-${Environment}"
+      LaunchTemplateData:
+        MetadataOptions:
+          HttpTokens: required
+          HttpEndpoint: enabled
+
   BatchComputeEnvironment:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
@@ -52,6 +61,9 @@ Resources:
           - Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SecurityGroup"
         Subnets:
           Fn::Split: [',', Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"]
+        LaunchTemplate:
+          LaunchTemplateId: !Ref BatchLaunchTemplate
+          Version: !GetAtt BatchLaunchTemplate.LatestVersionNumber
 
   BatchJobQueue:
     Type: AWS::Batch::JobQueue
