try bump wait time
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -561,7 +561,7 @@ jobs:
             --branch master
             --path $FLUX_PATH
             --timeout 5m
-            –-interval 10m
+            --interval 10m
             --components-extra=image-reflector-controller,image-automation-controller
             --namespace flux-system
             --cluster arn:aws:eks:$AWS_REGION:$AWS_ACCOUNT_ID:cluster/biomage-$CLUSTER_ENV
