--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -243,11 +243,6 @@ jobs:
         run: |-
           aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
-      - id: deploy-metrics-server
-        name: Deploy k8s metrics server
-        run: |-
-          kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
-
       - id: install-helm
         name: Install Helm
         run: |-
@@ -499,16 +494,6 @@ jobs:
               .myAccount.selfSignedCertificate = strenv(SELF_SIGNED_CERTIFICATE)
             ' infra/config/account-config.yaml
 
-          if [[ -n "${{ secrets.DATADOG_API_KEY }}" ]]
-          then
-            export DATADOG_API_KEY="${{ secrets.DATADOG_API_KEY }}"
-            export DATADOG_APP_KEY="${{ secrets.DATADOG_APP_KEY }}"
-            yq -i '
-              .myAccount.datadogAppKey = strenv(DATADOG_APP_KEY) |
-              .myAccount.datadogApiKey = strenv(DATADOG_API_KEY)
-            ' infra/config/account-config.yaml
-          fi
-
           cat infra/config/account-config.yaml
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -561,7 +546,7 @@ jobs:
             --branch master
             --path $FLUX_PATH
             --timeout 40s
-            –-interval 2m
+            --interval 2m
             --components-extra=image-reflector-controller,image-automation-controller
             --namespace flux-system
             --cluster arn:aws:eks:$AWS_REGION:$AWS_ACCOUNT_ID:cluster/biomage-$CLUSTER_ENV
@@ -755,31 +740,6 @@ jobs:
           yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/fargate-fluentbit-config.yaml
 
           kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
-
-      # Setting up Datadog to watch pod metrics for pods hosted on EC2 and Fargate nodes
-      - id: setup-datadog-cluster-agent
-        name: Setup Datadog cluster agent
-        run: |-
-          if [[ -n "${{ secrets.DATADOG_API_KEY }}" ]];
-          then
-            helm repo add datadog https://helm.datadoghq.com
-            helm repo update
-            helm upgrade datadog-agent datadog/datadog \
-              -f infra/datadog/cluster-agent-values.yaml \
-              --set datadog.apiKey=$DATADOG_API_KEY \
-              --set datadog.clusterName=biomage-$CLUSTER_ENV \
-              --install
-          else
-            echo "Datadog api key missing, skipping datadog setup"
-          fi
-
-      - id: setup-datadog-sidecar-permissions
-        name: Setup Datadog sidecar permissions
-        run: |-
-          if [[ -n "${{ secrets.DATADOG_API_KEY }}" ]];
-          then
-            kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
-          fi
 
       - id: setup-orca-cspm
         name: Setup ORCA CSPM
