--- a/infra/flux/kustomization-template.yaml
+++ b/infra/flux/kustomization-template.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - gotk-components.yaml
   - gotk-sync.yaml
 
 # Assign IRSA role that allows image-reflector pod to access ECR
