comment out lambda
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -126,9 +126,9 @@ Resources:
         - email
       UsernameConfiguration:
         CaseSensitive: false
-      LambdaConfig:
-        PostConfirmation:
-          Fn::ImportValue: !Sub PostRegisterLambdaArn-${Environment}
+      # LambdaConfig:
+      #   PostConfirmation:
+      #     Fn::ImportValue: !Sub PostRegisterLambdaArn-${Environment}
   UserPoolDomain:
     Type: AWS::Cognito::UserPoolDomain
     Properties:
@@ -136,12 +136,12 @@ Resources:
       Domain: !Sub "${UserPoolDomainName}-${Environment}-${AWS::AccountId}"
 
   # Add permission to allow userpool to trigger lambda
-  PostRegisterLambdaInvocationPermission:
-    Type: AWS::Lambda::Permission
-    Properties:
-      Action: "lambda:InvokeFunction"
-      FunctionName:
-        Fn::ImportValue: !Sub PostRegisterLambdaArn-${Environment}
-      Principal: "cognito-idp.amazonaws.com"
-      SourceArn: !GetAtt UserPool.Arn
+  # PostRegisterLambdaInvocationPermission:
+  #   Type: AWS::Lambda::Permission
+  #   Properties:
+  #     Action: "lambda:InvokeFunction"
+  #     FunctionName:
+  #       Fn::ImportValue: !Sub PostRegisterLambdaArn-${Environment}
+  #     Principal: "cognito-idp.amazonaws.com"
+  #     SourceArn: !GetAtt UserPool.Arn
 
