--- a/deployment-config.json
+++ b/deployment-config.json
@@ -64,7 +64,10 @@
         },
         "user_pool_domain_name": "hms-auth",
         "excluded_services": [
-            "cf/doit-cloudhealth-role.yaml"
+            "cf/ses.yaml",
+            "cf/doit-cloudhealth-role.yaml",
+            "cf/rds-agent-security-group.yaml",
+            "cf/rds-subnet-security-group.yaml"
         ]
     }
 }
