--- a/infra/config/account-config.yaml
+++ b/infra/config/account-config.yaml
@@ -6,4 +6,7 @@ myAccount:
   publicFacing: FILLED_IN_BY_CI
   acmCertificate: FILLED_IN_BY_CI
   selfSignedCertificate: FILLED_IN_BY_CI
+  datadogEnabled: FILLED_IN_BY_CI
+  datadogApiKey: FILLED_IN_BY_CI
+  datadogAppKey: FILLED_IN_BY_CI
   #FILLED IN BY IAC CI
