--- a/cf/rds-agent.yaml
+++ b/cf/rds-agent.yaml
@@ -56,11 +56,14 @@ Resources:
                   - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:aurora-cluster-${Environment}-*"
                   - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:aurora-cluster-${Environment}"
 
-  RDSAgent:
-    Type: AWS::EC2::Instance
-    Properties:
+  RDSLaunchTemplate:
+  Type: AWS::EC2::LaunchTemplate
+  Properties:
+    LaunchTemplateName: !Sub "rds-${Environment}-ssm-launch-template"
+    LaunchTemplateData:
       InstanceType: t2.nano
-      IamInstanceProfile: !Ref SSMProfile
+      IamInstanceProfile:
+        Arn: !GetAtt SSMProfile.Arn
       ImageId: !Ref LatestAmiId
       MetadataOptions:
         HttpTokens: required
@@ -72,10 +75,7 @@ Resources:
             Encrypted: 'true'
       SecurityGroupIds:
         - Fn::ImportValue: !Sub "biomage-${Environment}-rds::RDSAgentSecurityGroupId"
-      SubnetId:
-      #Pick first element in SubnetsPrivate
-        !Select [ 0, Fn::Split: [',', Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"] ]
-      #UserData Runs when ec2 is being deployed
+          #UserData Runs when ec2 is being deployed
       UserData:
         Fn::Base64:
           '
@@ -101,6 +101,17 @@ Resources:
           #!/bin/bash -e
           sudo yum -y install postgresql
           '
-      Tags:
-        - Key: "Name"
-          Value: !Sub "rds-${Environment}-ssm-agent"
+      TagSpecifications:
+        - ResourceType: instance
+          Tags:
+            - Key: "Name"
+              Value: !Sub "rds-${Environment}-ssm-agent"
+
+  RDSAgent:
+    Type: AWS::EC2::Instance
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateName: !Ref RDSLaunchTemplate
+        Version: !GetAtt RDSLaunchTemplate.LatestVersionNumber
+      SubnetId:
+        !Select [0, Fn::Split: [',', Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"]]
