fix profile spec
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/cf/rds-agent.yaml
+++ b/cf/rds-agent.yaml
@@ -62,7 +62,8 @@ Resources:
       LaunchTemplateName: !Sub "rds-${Environment}-ssm-launch-template"
       LaunchTemplateData:
         InstanceType: t2.nano
-        IamInstanceProfile: !Ref SSMProfile
+        IamInstanceProfile:
+          Arn: !GetAtt SSMProfile.Arn
         MetadataOptions:
           HttpTokens: required
           HttpEndpoint: enabled
