--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -293,7 +293,7 @@ jobs:
           on_retry_command: sleep $(shuf -i 5-15 -n 1)
           command: |-
             helm repo add eks https://aws.github.io/eks-charts
-            wget https://raw.githubusercontent.com/aws/eks-charts/master/stable/aws-load-balancer-controller/crds/crds.yaml
+            wget https://raw.githubusercontent.com/kubernetes-sigs/aws-load-balancer-controller/refs/heads/release-2.10/helm/aws-load-balancer-controller/crds/crds.yaml
             kubectl apply -f crds.yaml
             helm repo update
             helm upgrade aws-load-balancer-controller eks/aws-load-balancer-controller \
