--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -118,6 +118,7 @@ Resources:
                 Action: "s3:ListBucket"
                 Resource:
                   - !Sub "arn:aws:s3:::biomage-filtered-cells-${Environment}-${AWS::AccountId}"
+                  - !Sub "arn:aws:s3:::worker-results-${Environment}-${AWS::AccountId}"
 
         - PolicyName: !Sub "can-access-details-of-redis-cluster-${Environment}"
           PolicyDocument:
