Revert "Merge pull request #601 from hms-dbmi-cellenics/kbriceno/control-plane-lockdown"
This reverts commit 05061258f5fca96727332ea0e85ba119bbeb40e4, reversing
changes made to 5293fa729e5f252a5d86ee8d422613c19f63ad3d.

--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -135,4 +135,17 @@ jobs:
             --group state-machine-runner-group \
             --username state-machine-runner
 
-
+      - id: update-identitymapping-admin
+        name: Add cluster admin rights to everyone on the admin list.
+        run: |-
+          echo "Setting cluster admin rights for ${{matrix.environment.name}} in ${{matrix.environment.type}} environment"
+          ADMINS="${{ join(matrix.environment.admins, ' ') }}"
+          echo $ADMINS
+          for user in $ADMINS; do
+            echo "Adding cluster admin rights to $user"
+            eksctl create iamidentitymapping \
+              --cluster=biomage-$CLUSTER_ENV \
+              --arn arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:user/$user \
+              --group system:masters \
+              --username $user
+          done
