--- a/infra/config/github-environments-config.yaml
+++ b/infra/config/github-environments-config.yaml
@@ -1,7 +1,6 @@
 HMS:
-  publicFacing: true #controls the application load balancer that serves the API to public - kb 1/8/25
+  publicFacing: true
   selfSignedCertificate: false
 trv:
   publicFacing: false
   selfSignedCertificate: true
-
