--- a/deployment-config.json
+++ b/deployment-config.json
@@ -50,6 +50,18 @@
                 "production"
             ]
         },
+        "cluster_admins": {
+            "HMS": {
+                "staging": [
+                    "alexvpickering",
+                    "ci-users/testing/ci-user-testing"
+                ],
+                "production": [
+                    "alexvpickering",
+                    "ci-users/testing/ci-user-testing"
+                ]
+            }
+        },
         "user_pool_domain_name": "hms-auth",
         "excluded_services": [
             "cf/ses.yaml",
