--- a/infra/cf-iac-secret-key.yaml
+++ b/infra/cf-iac-secret-key.yaml
@@ -30,6 +30,14 @@ Resources:
             AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
           Action: kms:*
           Resource: '*'
+        - Sid: allow-decryption-to-iac-user
+          Effect: Allow
+          Principal:
+            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:user/ci-user-iac"
+          Action:
+          - kms:DescribeKey
+          - kms:Decrypt
+          Resource: '*'
         - Sid: allow-encryption-to-all-users
           Effect: Allow
           Principal: "*"
@@ -37,9 +45,6 @@ Resources:
           - kms:DescribeKey
           - kms:Encrypt
           Resource: '*'
-          Condition:
-            StringEquals:
-              aws:PrincipalOrgID: "o-f9odso7t59"
   IACKeyAlias:
     Type: AWS::KMS::Alias
     Properties:
