Revert "remove staging from deployment config"
This reverts commit e9d987960452698360d9b0e1e0557fdb1216f6e9.

--- a/deployment-config.json
+++ b/deployment-config.json
@@ -46,6 +46,7 @@
         "reply_email": "alex_pickering@hms.harvard.edu",
         "deployment_environments": {
             "HMS": [
+                "staging",
                 "production"
             ]
         },
